// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Snapshots ClassName 1`] = `
<h1
  className="sc-AxjAm gToDFS test"
>
  hei
</h1>
`;

exports[`Heading Snapshots No props 1`] = `
<h1
  className="sc-AxjAm gToDFS"
>
  Hei
</h1>
`;

exports[`Heading Snapshots level 1 1`] = `
<h1
  className="sc-AxjAm gToDFS"
>
  Hei
</h1>
`;

exports[`Heading Snapshots level 2 1`] = `
<h2
  className="sc-AxirZ decXcw"
>
  Hei
</h2>
`;

exports[`Heading Snapshots level 3 1`] = `
<h3
  className="sc-AxiKw cAQZNI"
>
  Hei
</h3>
`;

exports[`Heading Snapshots level 4 1`] = `
<h4
  className="sc-AxhCb cWSRul"
>
  Hei
</h4>
`;

exports[`Heading Snapshots level 5 1`] = `
<h5
  className="sc-AxhUy jDbDPK"
>
  Hei
</h5>
`;

exports[`Heading Snapshots level 6 1`] = `
<h6
  className="sc-AxgMl dSPlcW"
>
  Hei
</h6>
`;

exports[`Heading Snapshots no Children 1`] = `
<h1
  className="sc-AxjAm gToDFS"
/>
`;
